fix some flaw of viewing on firefox

--- a/src/hachibee_sphinx_theme/hachibee/static/main.css
+++ b/src/hachibee_sphinx_theme/hachibee/static/main.css
@@ -1,4 +1,16 @@
 @charset "utf-8";
+table {
+  border-collapse: collapse;
+  border: none;
+  border-spacing: 0;
+}
+th,
+td {
+  vertical-align: middle;
+  border: solid 1px #000;
+  font-weight: normal;
+  text-align: left;
+}
 html,
 body {
   font-family: "游ゴシック", "YuGothic", "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", "ＭＳ ゴシック", "Meiryo", "メイリオ", sans-serif;
@@ -13,7 +25,7 @@ div.content {
   height: auto;
   min-height: 100%;
   position: relative;
-  margin: 0 auto 80px;
+  margin: 0 auto;
 }
 h1,
 h2,
@@ -92,11 +104,11 @@ input[type="submit"] {
   -moz-border-radius: 3;
   -webkit-border-radius: 3;
   border-radius: 3;
-  -o-box-shadow: 0.1px 0.15px 1px 0.5px rgba(0,0,0,0.3);
-  -ms-box-shadow: 0.1px 0.15px 1px 0.5px rgba(0,0,0,0.3);
-  -moz-box-shadow: 0.1px 0.15px 1px 0.5px rgba(0,0,0,0.3);
-  -webkit-box-shadow: 0.1px 0.15px 1px 0.5px rgba(0,0,0,0.3);
-  box-shadow: 0.1px 0.15px 1px 0.5px rgba(0,0,0,0.3);
+  -o-box-shadow: 0.1px 0.15px 2px 0.1px rgba(0,0,0,0.3);
+  -ms-box-shadow: 0.1px 0.15px 2px 0.1px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0.1px 0.15px 2px 0.1px rgba(0,0,0,0.3);
+  -webkit-box-shadow: 0.1px 0.15px 2px 0.1px rgba(0,0,0,0.3);
+  box-shadow: 0.1px 0.15px 2px 0.1px rgba(0,0,0,0.3);
   display: inline-block;
   color: #fefefe;
   padding: 6px 10px 2px 10px;
@@ -111,22 +123,27 @@ p.topless {
   margin: 0 auto;
 }
 header {
-  background-color: rgba(245,245,245,0.7);
+  background-color: #f1f1f1;
   position: fixed;
   z-index: 10;
   top: 0%;
-  margin: 3px auto 30px 5px;
+  margin: auto;
   width: 100%;
+  height: 37px;
 }
-header .relative {
-  padding-right: 50px;
+header .right {
+  margin-right: 20px;
+}
+header .left {
+  margin-left: 20px;
 }
 header ul {
   padding: 0;
-  margin: 0;
+  margin: auto;
 }
 header li {
-  display: inline;
+  display: inline-block;
+  vertical-align: middle;
 }
 .breadcrumb li {
   display: inline-block;
@@ -138,7 +155,7 @@ header li {
 }
 .documentwrapper {
   background-color: #fefefe;
-  width: 960px;
+  width: 980px;
   height: auto;
   min-height: 100%;
   margin: 0 auto;
@@ -146,26 +163,32 @@ header li {
 .document {
   overflow: hidden;
   background-color: #fefefe;
-  margin: 0 auto;
-  padding-top: 40px;
-  padding-bottom: 80px;
-  width: 700px;
+  margin: 0 0 0 auto;
+  padding-top: 60px;
+  padding-bottom: 100px;
+  width: 720px;
 }
 .sidebarwrapper {
   float: left;
   margin: 0 auto;
-  padding-top: 50px;
+  padding-top: 60px;
   width: 260px;
   min-width: 260px;
   height: 100%;
 }
 .sidebar {
-  margin: 0 auto;
+  margin: 0 auto 0 0;
   width: 90%;
   font-size: 90%;
 }
 .sidebar .relative {
   margin: 60px auto;
+}
+.sidebar .topless {
+  width: inherit;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 nav.localtoc ul {
   margin-left: 0;
@@ -185,7 +208,7 @@ nav.localtoc li ul li {
 }
 .body {
   width: 90%;
-  margin: 0 auto;
+  margin: 0 0 0 auto;
 }
 .headerlink {
   text-decoration: none;
@@ -285,6 +308,10 @@ footer li {
 .clearer {
   clear: both;
 }
+th,
+td {
+  border: 0px solid rgba(243,243,243,0.15);
+}
 table {
   margin: 20px 0;
   border: 0px solid rgba(243,243,243,0.15);
@@ -297,6 +324,7 @@ table {
   box-shadow: 0.1px 0.15px 0px 0px rgba(0,0,0,0.3);
 }
 table caption {
+  text-align: center;
   font-size: 18px;
   line-height: 37px;
 }
@@ -309,6 +337,8 @@ table thead .row-odd {
   background-color: #52b5ce;
 }
 table thead th {
+  border: 2px solid rgba(243,243,243,0.2);
+  text-align: center;
   font-weight: normal;
   font-size: 18px;
 }
@@ -316,13 +346,12 @@ table tr {
   height: 42px;
 }
 table td {
-  -o-box-shadow: 0.1px 0.15px 1px 0.5px rgba(0,0,0,0.3);
-  -ms-box-shadow: 0.1px 0.15px 1px 0.5px rgba(0,0,0,0.3);
-  -moz-box-shadow: 0.1px 0.15px 1px 0.5px rgba(0,0,0,0.3);
-  -webkit-box-shadow: 0.1px 0.15px 1px 0.5px rgba(0,0,0,0.3);
-  box-shadow: 0.1px 0.15px 1px 0.5px rgba(0,0,0,0.3);
+  -o-box-shadow: 0.1px 0.15px 1px 0px rgba(0,0,0,0.3);
+  -ms-box-shadow: 0.1px 0.15px 1px 0px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0.1px 0.15px 1px 0px rgba(0,0,0,0.3);
+  -webkit-box-shadow: 0.1px 0.15px 1px 0px rgba(0,0,0,0.3);
+  box-shadow: 0.1px 0.15px 1px 0px rgba(0,0,0,0.3);
   padding: 0 5px;
-  vertical-align: middle;
 }
 table .row-even {
   background-color: #f7f7f7;
